--- a/aulaFormulario/index.html
+++ b/aulaFormulario/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="campo">
-            <label for="">De qual lado da aplicação você desenvolve:</label>
+            <label for=""><strong>De qual lado da aplicação você desenvolve:</strong></label>
             <label for="">
                 <input type="radio" name="devweb" value="frontend" checked>Front-end
             </label>
